--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
          
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
-  <artifactId>my-app</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>simple-java-app</artifactId>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>my-app</name>
@@ -69,7 +69,7 @@
         <artifactId>maven-deploy-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <repositoryId>nexus-snapshots</repositoryId>
+          <repositoryId>nexus-releases</repositoryId>
           <url>http://13.60.33.64:8081/repository/java-package-private/</url>
         </configuration>
       </plugin>
@@ -82,20 +82,7 @@
       <id>nexus-releases</id>
       <url>http://13.60.33.64:8081/repository/java-package-private/</url>
     </repository>
-
-    <!-- Repository for Snapshot Versions -->
-    <snapshotRepository>
-      <id>nexus-snapshots</id>
-      <url>http://13.60.33.64:8081/repository/java-package-private/</url>
-    </snapshotRepository>
   </distributionManagement>
 
-  <repositories>
-    <!-- Add Your Nexus Repository Here -->
-    <repository>
-      <id>nexus</id>
-      <url>http://13.60.33.64:8081/repository/java-package-private/</url>
-    </repository>
-  </repositories>
 
 </project>
